--- a/angular-xml-validator/src/app/file-upload/file-upload.component.scss
+++ b/angular-xml-validator/src/app/file-upload/file-upload.component.scss
@@ -1,27 +1,35 @@
-  .mat-header-cell {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  // .mat-header-cell {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 
-  .file-upload-form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    margin-top: 20px;  // Add margin to the top of the form to prevent overlapping
+  div {
+    margin: 20px;
   }
   
-  .file-input-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
   
-  .upload-button {
-    align-self: flex-start;
-  }
+button {
+  margin-right: 20px;
+}
+
+
+
+  // .file-upload-form {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: flex-start;
+  //   margin-top: 30px;  // Add margin to the top of the form to prevent overlapping
+  // }
+  
+  // .file-input-container {
+  //   display: flex;
+  //   align-items: center;
+  //  // gap: 10px;
+  // }
+  
+
   
   .file-name {
     font-size: 1rem;
