Responsive page style

--- a/angular-xml-validator/src/app/xml-display/xml-display.component.html
+++ b/angular-xml-validator/src/app/xml-display/xml-display.component.html
@@ -1,1 +1,8 @@
-<div class="xml-container" [innerHTML]="formattedXml"></div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>XML Display</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="xml-container" [innerHTML]="formattedXml"></div>
+  </mat-card-content>
+</mat-card>
