--- a/angular-xml-validator/src/app/app.component.scss
+++ b/angular-xml-validator/src/app/app.component.scss
@@ -1,14 +1,30 @@
 .container {
   display: flex;
+  flex-direction: row; /* Default layout: side-by-side */
+  padding: 0px;
+  gap: 10px; /* Add some space between the left and right containers */
 }
 
 .left, .right {
   flex: 1;
-  padding: 10px;
+  padding: 0px;
+  box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
 .right {
   background-color: #f5f5f5;
   border-left: 1px solid #ccc;
   overflow-y: auto;
+}
+
+/* Media query for responsive design */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Stack elements vertically on narrow screens */
+  }
+
+  .right {
+    border-left: none;
+    border-top: 1px solid #ccc; /* Add a top border for separation */
+  }
 }
